--- a/Java语法及常见类/不可变字符序列和可变字符序列.md
+++ b/Java语法及常见类/不可变字符序列和可变字符序列.md
@@ -88,7 +88,7 @@ System.out.println(str1==str3);
 
 结果
 
-![1570450395498](D:/Typora/img/1570450395498.png)
+![1570450395498](../resources/1570450395498-1572336848077.png)
 
 ### 3、常用API
 
