--- a/Java语法及常见类/包装类.md
+++ b/Java语法及常见类/包装类.md
@@ -57,9 +57,13 @@ int g = f;//自动拆箱，编译器自动写为int g = f.intValue();
 		System.out.println(t==s);
 ```
 
-运行结果
+运行结果 
 
-![1570448357713](D:\Typora\img\1570448357713.png)
+True
+
+false
+
+
 
 ### 2、源码分析
 
